# Terrain_Analysis_on_IA

./: .gitignore  CMakeLists.txt  README.md  clean_build_and_cmake_config_files.sh  make.bat
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
sources/: CMakeLists.txt  PyMain.cpp  PyMain.pxd  PyMain.pyx  main.cpp  setup.py  topological_main.cpp
sources/core_library/: CMakeLists.txt
sources/core_library/sources/: CMakeLists.txt
sources/core_library/sources/ia/: edge.h  mesh.h  triangle.h  vertex.h  vt_star.h
sources/core_library/sources/utilities/: basic_wrappers.h  io.cpp  io.h  quad_mesh.cpp  quad_mesh.h  timer.h  usage.h
sources/curvature/: abstract_curvature.h  concentrated_curvature.cpp  geometry_curvature.h
sources/gradient/: Gradient.cpp  Gradient.h
sources/morse/: aux_forman_gradient_vector.h  forman_arrow.h  forman_feature.cpp  formangradientvector.cpp  formangradientvector.h  homotopy_expansion.cpp  morse_io.cpp  watershedtoforman.cpp
sources/morse/WatershedAlgs/: simulatedimmersion.h
sources/remote/: main.cpp
sources/remote/gradient/: Gradient.cpp
sources/roughness/: Roughness.cpp  Roughness.h
sources/terrain_features/: critical_points_extractor.h  geometry_slope.cpp  geometry_slope.h  slope_extractor.h
